--- a/site/index.html
+++ b/site/index.html
@@ -12,14 +12,17 @@
   <body>
     <section id="content">
       <h1>Simon</h1>
-
+      
       <div class="simon-container">
-        <div class="simon-button green"></div>
-        <div class="simon-button red"></div>
-        <div class="simon-button yellow"></div>
+        <script src = "buttons.js"></script>
+        <div class="simon-button green" ></div>
+        <div class= "simon-button red"></div>
+        <div class="simon-button yellow "></div>
         <div class="simon-button blue"></div>
       </div>
     </section>
+
+    
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
