change title for testing purposes

--- a/site/index.html
+++ b/site/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Simon</title>
+    <title>Simon Game</title>
 
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <section id="content">
       <h1>Simon</h1>
-      
+
       <div class="simon-container">
         <script src = "buttons.js"></script>
         <div class="simon-button green" ></div>
@@ -22,7 +22,7 @@
       </div>
     </section>
 
-    
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
