--- a/site/index.html
+++ b/site/index.html
@@ -13,12 +13,19 @@
     <section id="content">
       <h1>Simon</h1>
 
+
       <div class="simon-container">
         <script src = "buttons.js"></script>
         <div class="simon-button green" ></div>
         <div class= "simon-button red"></div>
         <div class="simon-button yellow "></div>
         <div class="simon-button blue"></div>
+
+            <!--where to put audio tags?-->
+        <audio src="greensound.wav"></audio>
+        <audio src="redsound.wav"></audio>
+        <audio src="yellowsound.wav"></audio>
+        <audio src="bluesound.wav"></audio>
       </div>
     </section>
 
