gotta fix buttons.js

--- a/site/index.html
+++ b/site/index.html
@@ -18,10 +18,10 @@
         <script src = "sound.js"></script>
        <script src = "simon.js"></script>
         
-        <div class="simon-button green" onmousedown="greensound.play()" onclick="clickcounter()"></div>
-        <div class= "simon-button red" onmousedown="redsound.play()" onclick="clickcounter()"></div>
-        <div class="simon-button yellow" onmousedown="yellowsound.play()" onclick="clickcounter()"></div>
-        <div class="simon-button blue" onmousedown="bluesound.play()" onclick="clickcounter()"></div>
+        <div class="simon-button green" onmousedown="greensound.play()" onclick="clickcounter();handleResponse(simonData, 'green');" ></div>
+        <div class= "simon-button red" onmousedown="redsound.play()" onclick="clickcounter();handleResponse(simonData, 'red');"></div>
+        <div class="simon-button yellow" onmousedown="yellowsound.play()" onclick="clickcounter();handleResponse(simonData, 'yellow');"></div>
+        <div class="simon-button blue" onmousedown="bluesound.play()" onclick="clickcounter();handleResponse(simonData, 'blue');"></div>
 
 
         
@@ -31,7 +31,7 @@
         <button type="button" class="resetbutton" onclick = "resetcounter()">reset game</button>
 
       <h2>Number of Clicks: <a id="clicks">0</a></h2> <!--Only using a tag here so it is in the same line, nothing special-->
-      <h2>Result: <a id = "colortext">n/a</a></h2>
+      <h2>Result: <a id = "result">START GAME</a></h2>
     </section>
 
 
